# five-octave-61-key-keyboard

./: README.md
circuitpython-app/: README.md  boot.py  code.py  pyproject.toml  requirements.txt
circuitpython-app/octave_pcb/: key_matrix.py
circuitpython-bin/: adafruit-circuitpython-takayoshiotake_octave_rp2040-en_US-8.2.6.uf2
electronics/: Project_Library.kicad_sym
electronics/Five_Octave_Keys/: Five_Octave_Keys-PCBA.kicad_pcb  Five_Octave_Keys.kicad_pcb  Five_Octave_Keys.kicad_pro  Five_Octave_Keys.kicad_sch  fp-lib-table  sym-lib-table
electronics/Five_Octave_MCU/: Five_Octave_MCU.kicad_pcb  Five_Octave_MCU.kicad_pro  Five_Octave_MCU.kicad_sch
electronics/Project_Library.pretty/: Hot_Swap_Socket_CPG151101S11.kicad_mod  JUSHUO_AFC01-S12FCC-00.kicad_mod  JUSHUO_AFC01-S16FCC-00.kicad_mod  Stabilizer_2u.kicad_mod  Stabilizer_6_25u.kicad_mod
layout/: keyboard-layout-1.rawdata.json  keyboard-layout-2.rawdata.json  keyboard-layout.rawdata.json
mechanics/: Five_Octave_Enclosure.FCStd  Five_Octave_Enclosure_v2.FCStd
mechanics/Five_Octave_Plate/: Five_Octave_Plate.kicad_pcb  Five_Octave_Plate.kicad_pro
software/: README.md  boot.py  code.py
software/octave_pcb/: key_matrix.py
vial-bin/: takayoshiotake_five_octave_vial_20240103.uf2
